syntax = "proto3";

package sati_module_resource;

import "resource.hello.proto";

service WanderService {
    rpc SayHello (SayHelloRequest) returns (SayHelloResponse);
    rpc GetWander (GetWanderRequest) returns (ManyWanderResponse);
    rpc GetWanderById (GetWanderByIdRequest) returns (WanderResponse);
    rpc GetWanderByIds (GetWanderByIdsRequest) returns (ManyWanderResponse);
    rpc CreateWander (CreateWanderRequest) returns (WanderResponse);
    rpc UpdateWander (UpdateWanderRequest) returns (WanderResponse);
    rpc DeleteWander (DeleteWanderRequest) returns (WanderResponse);
    rpc RevertDeletedWander (DeleteWanderRequest) returns (WanderResponse);
    rpc GetWanderAlbum (GetWanderAlbumRequest) returns (ManyWanderAlbumResponse);
    rpc GetWanderAlbumById (GetWanderAlbumByIdRequest) returns (WanderAlbumResponse);
    rpc GetWanderAlbumByIds (GetWanderAlbumByIdsRequest) returns (ManyWanderAlbumResponse);
    rpc CreateWanderAlbum (CreateWanderAlbumRequest) returns (WanderAlbumResponse);
    rpc UpdateWanderAlbum (UpdateWanderAlbumRequest) returns (WanderAlbumResponse);
    rpc DeleteWanderAlbum (DeleteWanderAlbumRequest) returns (WanderAlbumResponse);
    rpc RevertDeletedWanderAlbum (DeleteWanderAlbumRequest) returns (WanderAlbumResponse);
    rpc GetWanderByWanderAlbumId (GetWanderByWanderAlbumIdRequest) returns (ManyWanderResponse);
    rpc FavoriteWander (FavoriteWanderRequest) returns (WanderRecordResponse);
    rpc FavoriteWanderAlbum (FavoriteWanderAlbumRequest) returns (WanderAlbumRecordResponse);
    rpc GetWanderRecordByWanderId (GetWanderRecordByIdRequest) returns (WanderRecordResponse);
    rpc GetWanderRecordByWanderIds (GetWanderRecordByIdsRequest) returns (ManyWanderRecordResponse);
    rpc SearchWanderRecord (SearchWanderRecordRequest) returns (ManyWanderRecordResponse);
    rpc GetWanderAlbumRecordByWanderAlbumId (GetWanderAlbumRecordByIdRequest) returns (WanderAlbumRecordResponse);
    rpc GetWanderAlbumRecordByWanderAlbumIds (GetWanderAlbumRecordByIdsRequest) returns (ManyWanderAlbumRecordResponse);
    rpc SearchWanderAlbumRecord (SearchWanderAlbumRecordRequest) returns (ManyWanderAlbumRecordResponse);
    rpc StartWander (StartWanderRequest) returns (WanderRecordResponse);
    rpc FinishWander (FinishWanderRequest) returns (WanderRecordResponse);
    rpc StartWanderAlbum (StartWanderAlbumRequest) returns (WanderAlbumRecordResponse);
    rpc FinishWanderAlbum (FinishWanderAlbumRequest) returns (WanderAlbumRecordResponse);
    rpc BuyWander (BuyWanderRequest) returns (WanderRecordResponse);
    rpc BuyWanderAlbum (BuyWanderAlbumRequest) returns (WanderAlbumRecordResponse);
    rpc SearchWander (SearchWanderRequest) returns (SearchWanderResponse);
    rpc SearchWanderAlbum (SearchWanderAlbumRequest) returns (SearchWanderAlbumResponse);
}

message GetWanderRequest {
    int32 first = 1;
    string after = 2;
}

message GetWanderByIdRequest {
    string id = 1;
}

message GetWanderByIdsRequest {
    repeated string ids = 1;
}

message GetWanderRecordByIdRequest {
    string userId = 1;
    string wanderId = 2;
}

message GetWanderRecordByIdsRequest {
    string userId = 1;
    repeated string wanderIds = 2;
}

message GetWanderByWanderAlbumIdRequest {
    string id = 1;
}

message CreateWanderRequest {
    string background = 1;
    string name = 2;
    string description = 3;
    repeated string scenes = 4;
    int32 price = 5;
    string author = 6;
    string audio = 7;
    string copy = 8;
    repeated string wanderAlbums = 9;
    int32 status = 10;
}

message UpdateWanderRequest {
    string id = 1;
    string background = 2;
    string name = 3;
    string description = 4;
    repeated string scenes = 5;
    int32 price = 6;
    string author = 7;
    string audio = 8;
    string copy = 9;
    repeated string wanderAlbums = 10;
    int32 status = 11;
}

message DeleteWanderRequest {
    string id = 1;
}

message FavoriteWanderRequest {
    string userId = 1;
    string wanderId = 2;
}

message StartWanderRequest {
    string userId = 1;
    string wanderId = 2;
}

message BuyWanderRequest {
    string userId = 1;
    string wanderId = 2;
}

message SearchWanderRequest {
    string keyword = 1;
    int32 from = 2;
    int32 size = 3;
}

message FinishWanderRequest {
    string userId = 1;
    string wanderId = 2;
    int32 duration = 3;
}

message WanderResponse {
    Wander data = 1;
}

message ManyWanderResponse {
    repeated Wander data = 1;
}

message SearchWanderResponse {
    int32 total = 1;
    repeated Wander data = 2;
}

message WanderRecordResponse {
    WanderRecord data = 1;
}

message ManyWanderRecordResponse {
    repeated WanderRecord data = 1;
}

message SearchWanderRecordRequest {
    string userId = 1;
    int32 page = 2;
    int32 limit = 3;
    string sort = 4;
    bool favorite = 5;
    repeated int32 boughtTime = 6;
}

message SearchWanderAlbumRecordRequest {
    string userId = 1;
    int32 page = 2;
    int32 limit = 3;
    string sort = 4;
    bool favorite = 5;
    repeated int32 boughtTime = 6;
}

message Wander {
    string id = 1;
    string background = 2;
    string name = 3;
    string description = 4;
    repeated string scenes = 5;
    int32 price = 6;
    int32 createTime = 7;
    int32 updateTime = 8;
    string author = 9;
    string audio = 10;
    string copy = 11;
    repeated string wanderAlbums = 12;
    int32 status = 13;
}

message WanderRecord {
    string id = 1;
    string userId = 2;
    string wanderId = 3;
    int32 favorite = 4;
    int32 totalDuration = 5;
    int32 longestDuration = 6;
    int32 startCount = 7;
    int32 finishCount = 8;
    int32 lastStartTime = 9;
    int32 lastFinishTime = 10;
    int32 boughtTime = 11;
}

message GetWanderAlbumRequest {
    int32 first = 1;
    string after = 2;
}

message GetWanderAlbumByIdRequest {
    string id = 1;
}

message GetWanderAlbumByIdsRequest {
    repeated string ids = 1;
}

message GetWanderAlbumRecordByIdRequest {
    string userId = 1;
    string wanderAlbumId = 2;
}

message GetWanderAlbumRecordByIdsRequest {
    string userId = 1;
    repeated string wanderAlbumIds = 2;
}

message CreateWanderAlbumRequest {
    string background = 1;
    string name = 2;
    string description = 3;
    repeated string scenes = 4;
    int32 price = 5;
    string author = 6;
    string copy = 8;
    int32 status = 9;
}

message UpdateWanderAlbumRequest {
    string id = 1;
    string background = 2;
    string name = 3;
    string description = 4;
    repeated string scenes = 5;
    int32 price = 6;
    string author = 7;
    string copy = 8;
    int32 status = 9;
}

message DeleteWanderAlbumRequest {
    string id = 1;
}

message FavoriteWanderAlbumRequest {
    string userId = 1;
    string wanderAlbumId = 2;
}

message StartWanderAlbumRequest {
    string userId = 1;
    string wanderAlbumId = 2;
}

message BuyWanderAlbumRequest {
    string userId = 1;
    string wanderAlbumId = 2;
}

message SearchWanderAlbumRequest {
    string keyword = 1;
    int32 from = 2;
    int32 size = 3;
}

message FinishWanderAlbumRequest {
    string userId = 1;
    string wanderAlbumId = 2;
    int32 duration = 3;
}

message WanderAlbumResponse {
    WanderAlbum data = 1;
}

message ManyWanderAlbumResponse {
    repeated WanderAlbum data = 1;
}

message SearchWanderAlbumResponse {
    int32 total = 1;
    repeated WanderAlbum data = 2;
}

message WanderAlbumRecordResponse {
    WanderAlbumRecord data = 1;
}

message ManyWanderAlbumRecordResponse {
    repeated WanderAlbumRecord data = 1;
}

message WanderAlbum {
    string id = 1;
    string background = 2;
    string name = 3;
    string description = 4;
    repeated string scenes = 5;
    int32 price = 6;
    int32 createTime = 7;
    int32 updateTime = 8;
    string author = 9;
    string copy = 10;
    int32 status = 11;
}

message WanderAlbumRecord {
    string id = 1;
    string userId = 2;
    string wanderAlbumId = 3;
    int32 favorite = 4;
    int32 totalDuration = 5;
    int32 longestDuration = 6;
    int32 startCount = 7;
    int32 finishCount = 8;
    int32 lastStartTime = 9;
    int32 lastFinishTime = 10;
    int32 boughtTime = 11;
}
